// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plan snapshots > compose-ai-armv7-refused 1`] = `
{
  "artifacts": [
    {
      "content": "services:
  spoolman:
    image: ghcr.io/sherrmann/spoolman-ng:latest # Also on Docker Hub: cookiemonster95/spoolman-ng:latest
    restart: unless-stopped
    volumes:
      # Keeps your database outside the container lifecycle. Do NOT modify the target path.
      - ./data:/home/app/.local/share/spoolman
    ports:
      - "7912:8000"
",
      "filename": "docker-compose.yml",
      "id": "compose",
      "language": "yaml",
      "title": "docker-compose.yml",
    },
  ],
  "steps": [
    {
      "artifactIds": [
        "compose",
      ],
      "body": "Create an empty directory (e.g. ~/spoolman) and save this file in it as docker-compose.yml.",
      "id": "compose-file",
      "notes": undefined,
      "title": "Create a folder and save docker-compose.yml",
    },
    {
      "body": "Then open http://<host>:7912.",
      "commands": [
        "docker compose up -d",
      ],
      "id": "start",
      "notes": [
        {
          "id": "armv7-best-effort",
          "level": "info",
          "text": "On 32-bit ARM (armv7, e.g. older Raspberry Pi OS) support is best-effort — amd64 and arm64 are the recommended targets. A 64-bit OS is worth it on Pi 3B+/4 hardware.",
        },
      ],
      "title": "Start it",
    },
    {
      "body": "After the first start, open Settings → AI: pick a preset (Ollama on another machine, OpenAI, Anthropic, OpenRouter, ...), enter the endpoint URL and key, and run Test connection. Every AI feature stays invisible until you enable it there. Details: https://github.com/sherrmann/Spoolman-NG/blob/master/docs/ai.md.",
      "id": "ai-remote",
      "title": "Connect your AI endpoint",
    },
  ],
  "warnings": [
    {
      "id": "ai-sidecar-refused-armv7",
      "level": "warning",
      "text": "Local AI skipped: Ollama has no 32-bit ARM (armv7) build, and this class of hardware cannot hold a useful model in memory. Spoolman itself runs fine here — point Settings → AI at an Ollama running on another machine on your network (a desktop PC or NAS is one URL away), or at a cloud provider. See docs/ai.md.",
    },
  ],
}
`;

exports[`plan snapshots > compose-migrate-upstream-postgres 1`] = `
{
  "artifacts": [],
  "steps": [
    {
      "body": "Run in the directory with your existing docker-compose.yml, after backing up your database.",
      "commands": [
        "docker compose down",
      ],
      "id": "migrate-stop",
      "title": "Stop the upstream instance",
    },
    {
      "body": "Wherever it says ghcr.io/donkie/spoolman (or donkieyo/spoolman on Docker Hub), use the Spoolman-NG image instead — ports, volume path and environment variables all stay as they are:",
      "code": {
        "content": "    image: ghcr.io/sherrmann/spoolman-ng:latest
",
        "language": "yaml",
      },
      "id": "migrate-swap-image",
      "title": "Swap the image in your existing compose file",
    },
    {
      "body": "Spoolman-NG points at your existing database (or data directory) and migrates the schema automatically on first start.",
      "commands": [
        "docker compose up -d",
      ],
      "id": "migrate-start",
      "notes": [
        {
          "id": "spoolman-url-unchanged",
          "level": "info",
          "text": "Your printers' [spoolman] sections keep working unchanged — the server stays on port 7912.",
        },
      ],
      "title": "Start it back up",
    },
  ],
  "warnings": [
    {
      "id": "backup-before-migrating",
      "level": "warning",
      "text": "Back up your database before migrating. Spoolman-NG migrates the schema automatically on first start, and a backup is the way back.",
    },
  ],
}
`;

exports[`plan snapshots > compose-mysql-nfc-puid-tz 1`] = `
{
  "artifacts": [
    {
      "content": "services:
  spoolman:
    image: ghcr.io/sherrmann/spoolman-ng:latest # Also on Docker Hub: cookiemonster95/spoolman-ng:latest
    restart: unless-stopped
    volumes:
      # Keeps your database outside the container lifecycle. Do NOT modify the target path.
      - ./data:/home/app/.local/share/spoolman
    ports:
      - "7912:8000"
    environment:
      - TZ=Europe/Berlin # timezone, used for timestamps in the UI/API
      - PUID=1000 # user id that owns the data volume
      - PGID=1000 # group id that owns the data volume
      - SPOOLMAN_DB_TYPE=mysql
      - SPOOLMAN_DB_HOST=db
      - SPOOLMAN_DB_PORT=3306
      - SPOOLMAN_DB_NAME=spoolman
      - SPOOLMAN_DB_USERNAME=spoolman
      - SPOOLMAN_DB_PASSWORD=change-me
      - SPOOLMAN_NFC_ENABLED=TRUE # server-side USB NFC reader — see docs/nfc.md
    devices:
      # Pass the USB NFC reader through to the container (see docs/nfc.md).
      - /dev/bus/usb:/dev/bus/usb
    depends_on:
      db:
        condition: service_healthy

  db:
    image: mariadb:lts
    restart: unless-stopped
    environment:
      - MARIADB_DATABASE=spoolman
      - MARIADB_USER=spoolman
      - MARIADB_PASSWORD=change-me # must match SPOOLMAN_DB_PASSWORD above
      - MARIADB_RANDOM_ROOT_PASSWORD=yes
    volumes:
      - db-data:/var/lib/mysql
    healthcheck:
      test: ["CMD", "/usr/local/bin/healthcheck.sh", "--su-mysql", "--connect", "--innodb_initialized"]
      interval: 5s
      timeout: 5s
      retries: 12

volumes:
  db-data:
",
      "filename": "docker-compose.yml",
      "id": "compose",
      "language": "yaml",
      "title": "docker-compose.yml",
    },
  ],
  "steps": [
    {
      "artifactIds": [
        "compose",
      ],
      "body": "Create an empty directory (e.g. ~/spoolman) and save this file in it as docker-compose.yml.",
      "id": "compose-file",
      "notes": [
        {
          "id": "change-db-password",
          "level": "warning",
          "text": "Change the change-me database password — it appears twice (SPOOLMAN_DB_PASSWORD and the db service) and must match.",
        },
      ],
      "title": "Create a folder and save docker-compose.yml",
    },
    {
      "body": "Then open http://<host>:7912.",
      "commands": [
        "docker compose up -d",
      ],
      "id": "start",
      "notes": [
        {
          "id": "armv7-best-effort",
          "level": "info",
          "text": "On 32-bit ARM (armv7, e.g. older Raspberry Pi OS) support is best-effort — amd64 and arm64 are the recommended targets. A 64-bit OS is worth it on Pi 3B+/4 hardware.",
        },
      ],
      "title": "Start it",
    },
    {
      "body": "The USB reader pass-through (devices:) and SPOOLMAN_NFC_ENABLED are already in your compose file. Hardware, udev rules and reader options: https://github.com/sherrmann/Spoolman-NG/blob/master/docs/nfc.md.",
      "id": "nfc",
      "notes": [
        {
          "id": "nfc-needs-https",
          "level": "info",
          "text": "Scanning NFC tags in the browser (Web NFC, Chrome on Android) requires HTTPS — put Spoolman behind a TLS-terminating proxy. Caddy is the least-effort way to get a trusted certificate. Server-side USB readers work without it (https://github.com/sherrmann/Spoolman-NG/blob/master/docs/nfc.md).",
        },
      ],
      "title": "NFC notes",
    },
  ],
  "warnings": [],
}
`;

exports[`plan snapshots > compose-postgres-traefik-subpath-klipper 1`] = `
{
  "artifacts": [
    {
      "content": "services:
  spoolman:
    image: ghcr.io/sherrmann/spoolman-ng:latest # Also on Docker Hub: cookiemonster95/spoolman-ng:latest
    restart: unless-stopped
    volumes:
      # Keeps your database outside the container lifecycle. Do NOT modify the target path.
      - ./data:/home/app/.local/share/spoolman
    ports:
      - "7912:8000"
    environment:
      - SPOOLMAN_BASE_PATH=/spoolman
      - SPOOLMAN_DB_TYPE=postgres
      - SPOOLMAN_DB_HOST=db
      - SPOOLMAN_DB_PORT=5432
      - SPOOLMAN_DB_NAME=spoolman
      - SPOOLMAN_DB_USERNAME=spoolman
      - SPOOLMAN_DB_PASSWORD=change-me
    labels:
      - traefik.enable=true
      - traefik.http.routers.spoolman.rule=PathPrefix(\`/spoolman\`)
      - traefik.http.services.spoolman.loadbalancer.server.port=8000
    depends_on:
      db:
        condition: service_healthy

  db:
    image: postgres:16-alpine
    restart: unless-stopped
    environment:
      - POSTGRES_DB=spoolman
      - POSTGRES_USER=spoolman
      - POSTGRES_PASSWORD=change-me # must match SPOOLMAN_DB_PASSWORD above
    volumes:
      - db-data:/var/lib/postgresql/data
    healthcheck:
      test: ["CMD-SHELL", "pg_isready -U spoolman -d spoolman"]
      interval: 5s
      timeout: 5s
      retries: 12

volumes:
  db-data:
",
      "filename": "docker-compose.yml",
      "id": "compose",
      "language": "yaml",
      "title": "docker-compose.yml",
    },
    {
      "content": "[spoolman]
server: http://<spoolman-host>:7912
# sync_rate: 5
",
      "filename": "moonraker-spoolman.ini",
      "id": "moonraker-spoolman",
      "language": "ini",
      "title": "moonraker.conf — [spoolman] (filament tracking; add on every printer)",
    },
  ],
  "steps": [
    {
      "artifactIds": [
        "compose",
      ],
      "body": "Create an empty directory (e.g. ~/spoolman) and save this file in it as docker-compose.yml.",
      "id": "compose-file",
      "notes": [
        {
          "id": "change-db-password",
          "level": "warning",
          "text": "Change the change-me database password — it appears twice (SPOOLMAN_DB_PASSWORD and the db service) and must match.",
        },
      ],
      "title": "Create a folder and save docker-compose.yml",
    },
    {
      "body": "Then open http://<host>:7912 (or /spoolman through your proxy).",
      "commands": [
        "docker compose up -d",
      ],
      "id": "start",
      "notes": [
        {
          "id": "armv7-best-effort",
          "level": "info",
          "text": "On 32-bit ARM (armv7, e.g. older Raspberry Pi OS) support is best-effort — amd64 and arm64 are the recommended targets. A 64-bit OS is worth it on Pi 3B+/4 hardware.",
        },
      ],
      "title": "Start it",
    },
    {
      "body": "The Traefik labels are already on the spoolman service in your compose file. Traefik proxies WebSockets natively — no extra config. SPOOLMAN_BASE_PATH=/spoolman is set to match the PathPrefix rule.",
      "id": "proxy",
      "notes": [
        {
          "id": "proxy-auth-klipper",
          "level": "warning",
          "text": "If you add SSO/forward-auth at the proxy, keep an unauthenticated path for printer traffic — Klipper talks to Spoolman through Moonraker, which cannot authenticate.",
        },
      ],
      "title": "Traefik routing",
    },
    {
      "artifactIds": [
        "moonraker-spoolman",
      ],
      "body": "Each printer is a client of the one shared Spoolman server — add this to every printer's moonraker.conf, then restart Moonraker. Replace <spoolman-host> with the machine running Spoolman. This is not the same as [update_manager Spoolman]: that only auto-updates the software, this is what reports filament use.",
      "id": "klipper-tracking",
      "title": "Wire your printer(s) into filament tracking",
    },
  ],
  "warnings": [
    {
      "id": "token-dropped-for-klipper",
      "level": "warning",
      "text": "API token omitted: Moonraker's [spoolman] component cannot send a token, so setting SPOOLMAN_API_TOKEN would silently break Klipper filament tracking (#268). Keep this instance token-free on the trusted LAN — use user accounts for the web UI, or gate external access at a reverse proxy/VPN with an unauthenticated path for printer traffic.",
    },
  ],
}
`;

exports[`plan snapshots > compose-sqlite-ai-sidecar 1`] = `
{
  "artifacts": [
    {
      "content": "services:
  spoolman:
    image: ghcr.io/sherrmann/spoolman-ng:latest # Also on Docker Hub: cookiemonster95/spoolman-ng:latest
    restart: unless-stopped
    volumes:
      # Keeps your database outside the container lifecycle. Do NOT modify the target path.
      - ./data:/home/app/.local/share/spoolman
    ports:
      - "7912:8000"
    environment:
      - SPOOLMAN_AI_BASE_URL=http://ollama:11434/v1 # the AI sidecar below — see docs/ai.md

  # Local AI runtime for Spoolman's AI features (Settings -> AI). Reachable from
  # the spoolman service only - no host port is published. Models are pulled from
  # Settings -> AI and live in the named volume. See docs/ai.md.
  ollama:
    image: ollama/ollama:latest
    restart: unless-stopped
    volumes:
      - ollama-models:/root/.ollama

volumes:
  ollama-models:
",
      "filename": "docker-compose.yml",
      "id": "compose",
      "language": "yaml",
      "title": "docker-compose.yml",
    },
  ],
  "steps": [
    {
      "artifactIds": [
        "compose",
      ],
      "body": "Create an empty directory (e.g. ~/spoolman) and save this file in it as docker-compose.yml.",
      "id": "compose-file",
      "notes": undefined,
      "title": "Create a folder and save docker-compose.yml",
    },
    {
      "body": "Then open http://<host>:7912.",
      "commands": [
        "docker compose up -d",
      ],
      "id": "start",
      "notes": [
        {
          "id": "armv7-best-effort",
          "level": "info",
          "text": "On 32-bit ARM (armv7, e.g. older Raspberry Pi OS) support is best-effort — amd64 and arm64 are the recommended targets. A 64-bit OS is worth it on Pi 3B+/4 hardware.",
        },
      ],
      "title": "Start it",
    },
    {
      "body": "Your compose file already includes an ollama service, and SPOOLMAN_AI_BASE_URL points Spoolman at it - nothing to install. After the first start, open Settings → AI, run Test connection, and pull the recommended models from there (sizes are shown before downloading; models land in the ollama-models volume). The sidecar publishes no host port - only Spoolman reaches it.",
      "id": "ai-sidecar",
      "notes": [
        {
          "id": "ai-hardware-expectations",
          "level": "info",
          "text": "An x86 machine runs the full tier: chat, search and vision models (2-6 GB each). CPU-only works; an NVIDIA GPU speeds it up considerably (see Ollama's Docker GPU docs).",
        },
      ],
      "title": "Local AI sidecar",
    },
  ],
  "warnings": [],
}
`;

exports[`plan snapshots > compose-sqlite-caddy-token 1`] = `
{
  "artifacts": [
    {
      "content": "services:
  spoolman:
    image: ghcr.io/sherrmann/spoolman-ng:latest # Also on Docker Hub: cookiemonster95/spoolman-ng:latest
    restart: unless-stopped
    volumes:
      # Keeps your database outside the container lifecycle. Do NOT modify the target path.
      - ./data:/home/app/.local/share/spoolman
    ports:
      - "7912:8000"
    environment:
      - SPOOLMAN_API_TOKEN=change-me # generate one: openssl rand -hex 32
",
      "filename": "docker-compose.yml",
      "id": "compose",
      "language": "yaml",
      "title": "docker-compose.yml",
    },
    {
      "content": "spoolman.example.com {
    reverse_proxy localhost:7912
}
",
      "filename": "Caddyfile",
      "id": "proxy-caddy",
      "language": "caddy",
      "title": "Caddyfile",
    },
  ],
  "steps": [
    {
      "artifactIds": [
        "compose",
      ],
      "body": "Create an empty directory (e.g. ~/spoolman) and save this file in it as docker-compose.yml.",
      "id": "compose-file",
      "notes": undefined,
      "title": "Create a folder and save docker-compose.yml",
    },
    {
      "body": "Then open http://<host>:7912.",
      "commands": [
        "docker compose up -d",
      ],
      "id": "start",
      "notes": [
        {
          "id": "armv7-best-effort",
          "level": "info",
          "text": "On 32-bit ARM (armv7, e.g. older Raspberry Pi OS) support is best-effort — amd64 and arm64 are the recommended targets. A 64-bit OS is worth it on Pi 3B+/4 hardware.",
        },
      ],
      "title": "Start it",
    },
    {
      "artifactIds": [
        "proxy-caddy",
      ],
      "body": "Caddy fetches certificates automatically and proxies WebSockets out of the box.",
      "id": "proxy",
      "notes": [
        {
          "id": "proxy-websockets",
          "level": "info",
          "text": "Live updates (and Moonraker's connection) run over WebSockets under /api/v1/… — a proxy without upgrade handling serves the UI fine while live updates silently die.",
        },
      ],
      "title": "Put it behind Caddy",
    },
  ],
  "warnings": [],
}
`;

exports[`plan snapshots > compose-sqlite-default 1`] = `
{
  "artifacts": [
    {
      "content": "services:
  spoolman:
    image: ghcr.io/sherrmann/spoolman-ng:latest # Also on Docker Hub: cookiemonster95/spoolman-ng:latest
    restart: unless-stopped
    volumes:
      # Keeps your database outside the container lifecycle. Do NOT modify the target path.
      - ./data:/home/app/.local/share/spoolman
    ports:
      - "7912:8000"
    environment:
      - TZ=Europe/Stockholm # timezone, used for timestamps in the UI/API
",
      "filename": "docker-compose.yml",
      "id": "compose",
      "language": "yaml",
      "title": "docker-compose.yml",
    },
  ],
  "steps": [
    {
      "artifactIds": [
        "compose",
      ],
      "body": "Create an empty directory (e.g. ~/spoolman) and save this file in it as docker-compose.yml.",
      "id": "compose-file",
      "notes": undefined,
      "title": "Create a folder and save docker-compose.yml",
    },
    {
      "body": "Then open http://<host>:7912.",
      "commands": [
        "docker compose up -d",
      ],
      "id": "start",
      "notes": [
        {
          "id": "armv7-best-effort",
          "level": "info",
          "text": "On 32-bit ARM (armv7, e.g. older Raspberry Pi OS) support is best-effort — amd64 and arm64 are the recommended targets. A 64-bit OS is worth it on Pi 3B+/4 hardware.",
        },
      ],
      "title": "Start it",
    },
  ],
  "warnings": [],
}
`;

exports[`plan snapshots > compose-switch-from-native 1`] = `
{
  "artifacts": [
    {
      "content": "services:
  spoolman:
    image: ghcr.io/sherrmann/spoolman-ng:latest # Also on Docker Hub: cookiemonster95/spoolman-ng:latest
    restart: unless-stopped
    volumes:
      # Keeps your database outside the container lifecycle. Do NOT modify the target path.
      - ./data:/home/app/.local/share/spoolman
    ports:
      - "7912:8000"
    environment:
      - TZ=Europe/Stockholm # timezone, used for timestamps in the UI/API
",
      "filename": "docker-compose.yml",
      "id": "compose",
      "language": "yaml",
      "title": "docker-compose.yml",
    },
  ],
  "steps": [
    {
      "commands": [
        "sudo systemctl stop Spoolman",
      ],
      "id": "switch-stop-native",
      "title": "Stop the native service",
    },
    {
      "artifactIds": [
        "compose",
      ],
      "body": "Create an empty directory (e.g. ~/spoolman) and save this file in it as docker-compose.yml.",
      "id": "compose-file",
      "title": "Create a folder and save docker-compose.yml",
    },
    {
      "body": "Your data lives in one place regardless of install method — switching is just moving the data directory.",
      "commands": [
        "mkdir -p ./data",
        "cp -a ~/.local/share/spoolman/. ./data/",
      ],
      "id": "switch-copy-data",
      "notes": [
        {
          "id": "stop-both-sides",
          "level": "warning",
          "text": "Stop Spoolman on both sides before copying, and copy the whole directory (database plus backups/). If you use a custom SPOOLMAN_DIR_DATA, copy that directory instead.",
        },
      ],
      "title": "Copy your data into the bind mount",
    },
    {
      "commands": [
        "docker compose up -d",
      ],
      "id": "start",
      "notes": [
        {
          "id": "spoolman-url-unchanged",
          "level": "info",
          "text": "Your printers' [spoolman] sections keep working unchanged — the server stays on port 7912.",
        },
      ],
      "title": "Start it",
    },
    {
      "body": "Disable the systemd unit and delete ~/Spoolman — keep the old data directory until you've verified the Docker install (see Uninstalling in the installation guide: https://github.com/sherrmann/Spoolman-NG/blob/master/docs/installation.md).",
      "id": "switch-cleanup",
      "title": "Once happy, remove the native install",
    },
  ],
  "warnings": [],
}
`;

exports[`plan snapshots > helm-mysql-token 1`] = `
{
  "artifacts": [
    {
      "content": "# Spoolman-NG Helm values. Install with:
#   helm install spoolman oci://ghcr.io/sherrmann/charts/spoolman-ng -f values.yaml

env:
  SPOOLMAN_DB_TYPE: mysql
  SPOOLMAN_DB_HOST: my-database-host # point at your database server; the chart bundles none
  SPOOLMAN_DB_PORT: "3306"
  SPOOLMAN_DB_NAME: spoolman
  SPOOLMAN_DB_USERNAME: spoolman
  SPOOLMAN_API_TOKEN: change-me # generate one: openssl rand -hex 32

# Mounts the secret's key as a file (SPOOLMAN_DB_PASSWORD_FILE) — no password in values.
dbPasswordSecret:
  name: spoolman-db
  key: password

ingress:
  enabled: true
  hosts:
    - host: spoolman.example.com
      paths: [{ path: /, pathType: Prefix }]
",
      "filename": "values.yaml",
      "id": "values",
      "language": "yaml",
      "title": "values.yaml (Helm)",
    },
  ],
  "steps": [
    {
      "body": "The chart bundles no database — point SPOOLMAN_DB_HOST at one you run. The password is mounted from a Secret (never in values):",
      "commands": [
        "kubectl create secret generic spoolman-db --from-literal=password='change-me'",
      ],
      "id": "db-secret",
      "title": "Create the database password secret",
    },
    {
      "artifactIds": [
        "values",
      ],
      "id": "values",
      "notes": undefined,
      "title": "Save values.yaml",
    },
    {
      "body": "Defaults: one replica (the bundled SQLite database is single-writer), a 1 Gi PVC, health probes, non-root security context.",
      "commands": [
        "helm install spoolman oci://ghcr.io/sherrmann/charts/spoolman-ng -f values.yaml",
      ],
      "id": "helm-install",
      "title": "Install the chart",
    },
    {
      "body": "Via your Ingress: http(s)://spoolman.example.com.",
      "id": "access",
      "title": "Open the UI",
    },
  ],
  "warnings": [],
}
`;

exports[`plan snapshots > helm-postgres-subpath 1`] = `
{
  "artifacts": [
    {
      "content": "# Spoolman-NG Helm values. Install with:
#   helm install spoolman oci://ghcr.io/sherrmann/charts/spoolman-ng -f values.yaml

env:
  SPOOLMAN_BASE_PATH: /spoolman
  SPOOLMAN_DB_TYPE: postgres
  SPOOLMAN_DB_HOST: my-database-host # point at your database server; the chart bundles none
  SPOOLMAN_DB_PORT: "5432"
  SPOOLMAN_DB_NAME: spoolman
  SPOOLMAN_DB_USERNAME: spoolman

# Mounts the secret's key as a file (SPOOLMAN_DB_PASSWORD_FILE) — no password in values.
dbPasswordSecret:
  name: spoolman-db
  key: password

# Sub-path serving: the base path and the probe path must move together.
probes:
  path: /spoolman/api/v1/health
",
      "filename": "values.yaml",
      "id": "values",
      "language": "yaml",
      "title": "values.yaml (Helm)",
    },
  ],
  "steps": [
    {
      "body": "The chart bundles no database — point SPOOLMAN_DB_HOST at one you run. The password is mounted from a Secret (never in values):",
      "commands": [
        "kubectl create secret generic spoolman-db --from-literal=password='change-me'",
      ],
      "id": "db-secret",
      "title": "Create the database password secret",
    },
    {
      "artifactIds": [
        "values",
      ],
      "id": "values",
      "notes": undefined,
      "title": "Save values.yaml",
    },
    {
      "body": "Defaults: one replica (the bundled SQLite database is single-writer), a 1 Gi PVC, health probes, non-root security context.",
      "commands": [
        "helm install spoolman oci://ghcr.io/sherrmann/charts/spoolman-ng -f values.yaml",
      ],
      "id": "helm-install",
      "title": "Install the chart",
    },
    {
      "body": "No Ingress configured — reach it with kubectl port-forward against the service the chart created (kubectl get svc), or add ingress: to values.yaml later.",
      "id": "access",
      "title": "Open the UI",
    },
  ],
  "warnings": [],
}
`;

exports[`plan snapshots > helm-sqlite-default 1`] = `
{
  "artifacts": [
    {
      "content": "# Spoolman-NG Helm values. Install with:
#   helm install spoolman oci://ghcr.io/sherrmann/charts/spoolman-ng -f values.yaml

# The chart defaults suit a single-node SQLite install: 1 replica, a 1 Gi PVC,
# health probes on /api/v1/health, and a non-root security context.
# Any SPOOLMAN_* variable from docs/installation.md can go under env:.
env: {}
",
      "filename": "values.yaml",
      "id": "values",
      "language": "yaml",
      "title": "values.yaml (Helm)",
    },
  ],
  "steps": [
    {
      "artifactIds": [
        "values",
      ],
      "id": "values",
      "notes": undefined,
      "title": "Save values.yaml",
    },
    {
      "body": "Defaults: one replica (the bundled SQLite database is single-writer), a 1 Gi PVC, health probes, non-root security context.",
      "commands": [
        "helm install spoolman oci://ghcr.io/sherrmann/charts/spoolman-ng -f values.yaml",
      ],
      "id": "helm-install",
      "title": "Install the chart",
    },
    {
      "body": "No Ingress configured — reach it with kubectl port-forward against the service the chart created (kubectl get svc), or add ingress: to values.yaml later.",
      "id": "access",
      "title": "Open the UI",
    },
  ],
  "warnings": [],
}
`;

exports[`plan snapshots > native-fresh-ai-local 1`] = `
{
  "artifacts": [
    {
      "content": "# Spoolman-NG configuration (native install).
# Full reference: .env.example and docs/installation.md → "Environment variable reference".

# Interface and port the server listens on (the installer's default port is 7912).
SPOOLMAN_HOST=0.0.0.0
SPOOLMAN_PORT=7912

# Local AI runtime installed by scripts/install-ai.sh (Ollama on this machine).
# Pick and pull models in Settings → AI. See docs/ai.md.
SPOOLMAN_AI_BASE_URL=http://localhost:11434/v1
",
      "filename": ".env",
      "id": "env",
      "language": "dotenv",
      "title": ".env (in ~/Spoolman)",
    },
  ],
  "steps": [
    {
      "body": "Fetches the latest release and runs the installer: it sets up uv, the Python environment, and an optional systemd service (named Spoolman). The UI then runs on http://<host>:7912.",
      "commands": [
        "curl -fsSL https://github.com/sherrmann/Spoolman-NG/releases/latest/download/spoolman.zip -o spoolman.zip \\",
        "  && unzip spoolman.zip -d ~/Spoolman && cd ~/Spoolman && bash ./scripts/install.sh",
      ],
      "id": "install",
      "notes": [
        {
          "id": "armv7-best-effort",
          "level": "info",
          "text": "On 32-bit ARM (armv7, e.g. older Raspberry Pi OS) support is best-effort — amd64 and arm64 are the recommended targets. A 64-bit OS is worth it on Pi 3B+/4 hardware.",
        },
      ],
      "title": "Install with one line",
    },
    {
      "artifactIds": [
        "env",
      ],
      "body": "The installer creates .env from .env.example. Replace it with this (or merge the lines you need), then restart: sudo systemctl restart Spoolman.",
      "id": "configure-env",
      "notes": undefined,
      "title": "Configure .env",
    },
    {
      "body": "Installs Ollama with its official installer, enables its service, and points SPOOLMAN_AI_BASE_URL in .env at it (the same line is already in the .env above). The script refuses unsupported hardware (32-bit ARM, low RAM) with remote-endpoint guidance instead. You can also pass --with-ai to install.sh in step 1 to do both at once.",
      "commands": [
        "cd ~/Spoolman && bash ./scripts/install-ai.sh",
      ],
      "id": "ai-native",
      "notes": [
        {
          "id": "ai-hardware-expectations",
          "level": "info",
          "text": "Pi 4/5-class hardware handles small text models (2-3 GB each) for chat and search at a relaxed pace. Vision models (Scan-to-Spool) are a stretch here - test before relying on them, or point the vision model at a bigger machine or a cloud provider later.",
        },
      ],
      "title": "Local AI on this machine",
    },
  ],
  "warnings": [],
}
`;

exports[`plan snapshots > native-fresh-postgres-nginx 1`] = `
{
  "artifacts": [
    {
      "content": "# Spoolman-NG configuration (native install).
# Full reference: .env.example and docs/installation.md → "Environment variable reference".

# Interface and port the server listens on (the installer's default port is 7912).
SPOOLMAN_HOST=0.0.0.0
SPOOLMAN_PORT=7912

# External PostgreSQL database. Point these at your
# existing server — the installer does not provision one.
SPOOLMAN_DB_TYPE=postgres
SPOOLMAN_DB_HOST=localhost
SPOOLMAN_DB_PORT=5432
SPOOLMAN_DB_NAME=spoolman
SPOOLMAN_DB_USERNAME=spoolman
SPOOLMAN_DB_PASSWORD=change-me

# Server-side USB NFC reader — see docs/nfc.md for hardware, udev rules and
# the browser (Web NFC) alternative. Also run: uv sync --extra nfc
SPOOLMAN_NFC_ENABLED=TRUE
",
      "filename": ".env",
      "id": "env",
      "language": "dotenv",
      "title": ".env (in ~/Spoolman)",
    },
    {
      "content": "location / {
    proxy_pass http://127.0.0.1:7912;
    proxy_set_header Host $host;
    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
    proxy_set_header X-Forwarded-Proto $scheme;
    proxy_http_version 1.1;
    proxy_set_header Upgrade $http_upgrade;      # WebSocket live updates
    proxy_set_header Connection "upgrade";
}
",
      "filename": "spoolman-nginx.conf",
      "id": "proxy-nginx",
      "language": "nginx",
      "title": "nginx — inside your server { } block",
    },
  ],
  "steps": [
    {
      "body": "Fetches the latest release and runs the installer: it sets up uv, the Python environment, and an optional systemd service (named Spoolman). The UI then runs on http://<host>:7912.",
      "commands": [
        "curl -fsSL https://github.com/sherrmann/Spoolman-NG/releases/latest/download/spoolman.zip -o spoolman.zip \\",
        "  && unzip spoolman.zip -d ~/Spoolman && cd ~/Spoolman && bash ./scripts/install.sh",
      ],
      "id": "install",
      "notes": [
        {
          "id": "armv7-best-effort",
          "level": "info",
          "text": "On 32-bit ARM (armv7, e.g. older Raspberry Pi OS) support is best-effort — amd64 and arm64 are the recommended targets. A 64-bit OS is worth it on Pi 3B+/4 hardware.",
        },
      ],
      "title": "Install with one line",
    },
    {
      "artifactIds": [
        "env",
      ],
      "body": "The installer creates .env from .env.example. Replace it with this (or merge the lines you need), then restart: sudo systemctl restart Spoolman.",
      "id": "configure-env",
      "notes": [
        {
          "id": "native-external-db",
          "level": "info",
          "text": "The installer does not provision a database server — point the SPOOLMAN_DB_* variables at an existing one you manage.",
        },
      ],
      "title": "Configure .env",
    },
    {
      "artifactIds": [
        "proxy-nginx",
      ],
      "body": "Add this inside your server { } block — the Upgrade/Connection headers are the part people miss.",
      "id": "proxy",
      "notes": [
        {
          "id": "proxy-websockets",
          "level": "info",
          "text": "Live updates (and Moonraker's connection) run over WebSockets under /api/v1/… — a proxy without upgrade handling serves the UI fine while live updates silently die.",
        },
      ],
      "title": "Put it behind nginx",
    },
    {
      "body": "The native install omits the NFC extra by default. For reader hardware, udev rules and the SPOOLMAN_NFC_* variables, see https://github.com/sherrmann/Spoolman-NG/blob/master/docs/nfc.md.",
      "commands": [
        "cd ~/Spoolman && uv sync --extra nfc",
      ],
      "id": "nfc",
      "notes": [
        {
          "id": "nfc-needs-https",
          "level": "info",
          "text": "Scanning NFC tags in the browser (Web NFC, Chrome on Android) requires HTTPS — put Spoolman behind a TLS-terminating proxy. Server-side USB readers work without it (https://github.com/sherrmann/Spoolman-NG/blob/master/docs/nfc.md).",
        },
      ],
      "title": "Enable the USB NFC reader",
    },
  ],
  "warnings": [],
}
`;

exports[`plan snapshots > native-sqlite-klipper-pre20260719 1`] = `
{
  "artifacts": [
    {
      "content": "[update_manager Spoolman]
type: zip
channel: stable
repo: sherrmann/Spoolman-NG
path: ~/Spoolman
virtualenv: .venv
requirements: requirements.txt
persistent_files:
  .env
  uv
managed_services: Spoolman
",
      "filename": "moonraker-update-manager.ini",
      "id": "moonraker-update-manager",
      "language": "ini",
      "title": "moonraker.conf — [update_manager Spoolman] (one-click updates)",
    },
  ],
  "steps": [
    {
      "body": "Older releases shipped a release_info.json whose project name does not match the repository, and Moonraker trusts that file over your configured repo: — update checks fail until it is corrected. Fix it once:",
      "commands": [
        "sed -i 's/"Spoolman NG"/"Spoolman-NG"/' ~/Spoolman/release_info.json",
        "sudo systemctl restart moonraker",
      ],
      "id": "release-info-fix",
      "title": "One-time fix for installs set up before 2026-07-19",
    },
    {
      "artifactIds": [
        "moonraker-update-manager",
      ],
      "body": "With [update_manager Spoolman] configured, Spoolman-NG appears in your printer UI's update list — update it there. Not set up yet? Add it now:",
      "commands": [
        "echo "Spoolman" >> ~/printer_data/moonraker.asvc",
        "sudo systemctl restart moonraker",
      ],
      "id": "update-from-printer-ui",
      "title": "Update from Mainsail/Fluidd",
    },
    {
      "commands": [
        "cd ~/Spoolman && bash scripts/update.sh          # to the latest release",
        "bash scripts/update.sh --tag v2026.7.12          # to (or back to) a specific one",
      ],
      "id": "update-native",
      "title": "Or update from the shell",
    },
  ],
  "warnings": [
    {
      "id": "backup-before-updating",
      "level": "info",
      "text": "Upgrades apply database migrations automatically on startup — take a backup first so you can roll back.",
    },
  ],
}
`;
